separate library's view from mainwindow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/main-window.cc
   src/preferences.cc
   src/library.cc
+  src/library-view.cc
   src/songbook.cc
   src/build-engine.cc
   src/song-editor.cc
@@ -77,6 +78,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/main-window.hh
   src/preferences.hh
   src/library.hh
+  src/library-view.hh
   src/build-engine.hh
   src/songbook.hh
   src/song-editor.hh
