Modifie build phase to take care of Bundle signature
	- custom plist file which include path to pub key
	- add pub key to repo
	- modif in CMakeList to deal with it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ if( APPLE )
   set( MACOSX_BUNDLE_ICON_FILE livre.icns )
   set( CPACK_BUNDLE_NAME Sonbook Client With Space)
   #versions
-  set( MACOSX_BUNDLE_VERSION 0.5 )
-  set( MACOSX_BUNDLE_SHORT_VERSION_STRING 0.5 )
-  set( MACOSX_BUNDLE_LONG_VERSION_STRING Version 0.5 )
+  set( MACOSX_BUNDLE_VERSION 0.5.1 )
+  set( MACOSX_BUNDLE_SHORT_VERSION_STRING 0.5.1 )
+  set( MACOSX_BUNDLE_LONG_VERSION_STRING "Version 0.5.1" )
 
   #name of the preference file, usefull if we need to keep the same preference file
   #upgrade after upgrade without loosing preferences
@@ -21,9 +21,16 @@ if( APPLE )
   #need to check a few things for autoupdate
   # this will set the UPPERCASE Variable to the right path 
   # for soft/Hard linknig of the framwork.
-  find_library(SPARKLE_FRAMEWORK Sparkle)# ${ADD_FRAMEWORK_PATH})
-  find_library(APPKIT_FRAMEWORK AppKit)# ${ADD_FRAMEWORK_PATH})
+  find_library(SPARKLE_FRAMEWORK Sparkle)
+  find_library(APPKIT_FRAMEWORK AppKit)
 
+  # we need to copy the public key to check the updates
+  set(PUBLIC_KEY "${CMAKE_CURRENT_SOURCE_DIR}/macos_specific/dsa_pub_songbookclient.pem")
+  SET_SOURCE_FILES_PROPERTIES(
+     ${PUBLIC_KEY}
+     PROPERTIES
+     MACOSX_PACKAGE_LOCATION Resources
+   )
 endif( APPLE )
 
 #-------------------------------------------------------------------------------
@@ -224,9 +231,10 @@ if( APPLE )
     add_executable( ${PROGNAME} MACOSX_BUNDLE ${SONGBOOK_CLIENT_SOURCES} 
       ${SONGBOOK_CLIENT_MOCS} ${SONGBOOK_CLIENT_RESSOURCES} ${COMPILED_TRANSLATIONS}
       ${qtpropertyeditor_SRCS} ${qtpropertyeditor_MOC} ${qtpropertyeditor_RESOURCES}
+      ${PUBLIC_KEY}
       )
     add_custom_command( TARGET ${PROGNAME} POST_BUILD
-      COMMAND mkdir ARGS ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources
+      #COMMAND mkdir ARGS ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources
       COMMAND mkdir ARGS ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources/lang
       COMMAND cp ARGS ${MACOSX_BUNDLE_ICON_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources
       COMMAND cp ARGS ../lang/*.qm ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources/lang
@@ -234,6 +242,9 @@ if( APPLE )
     # we need to add SPARKLE and APPKIT as '-framework'
     target_link_libraries(${PROGNAME} ${APPKIT_FRAMEWORK})
     target_link_libraries(${PROGNAME} ${SPARKLE_FRAMEWORK})
+
+	#genération d'une plist custom pour sparkle from a plist.in whete @VARAIBLE@ are replaces by the content of VARAIBLE
+    set_target_properties( ${PROGNAME}  PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/macos_specific/Info.plist.in )
 else( APPLE )
     add_executable(${PROGNAME}
       ${SONGBOOK_CLIENT_SOURCES} 
