Add a default song item delegate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/songbook-panel.cc
   src/notification.cc
   src/identity-proxy-model.cc
+  src/song-item-delegate.cc
   )
 
 # header (moc)
@@ -86,6 +87,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/songbook-panel.hh
   src/notification.hh
   src/identity-proxy-model.hh
+  src/song-item-delegate.hh
   )
 # add header for binding between C/C++ and objective-C
 # to be able to call Sparkle (Autoupdate) on Mac os
