--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,37 @@
 cmake_minimum_required(VERSION 2.6)
+set(CMAKE_COLOR_MAKEFILE ON)
+#set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
-if(NOT EXISTS ${SOURCE_DIR}/songbookClientConfig.cmake)
-    message(FATAL_ERROR "songbookClientConfig.cmake")
+set(CMAKE_MODULE_PATH "${SOURCE_DIR}/cmake/")
+
+if(NOT EXISTS ${SOURCE_DIR}/songbook-client-config.cmake)
+  message(FATAL_ERROR "songbook-client-config.cmake")
 endif()
 
-include(songbookClientConfig.cmake)
-
-set(CMAKE_COLOR_MAKEFILE ON)
-#set(CMAKE_VERBOSE_MAKEFILE ON)
-
-#set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
-
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+include(songbook-client-config.cmake)
 
 find_package(LibArchive REQUIRED)
-include_directories(${LibArchive_INCLUDE_DIRS})
 
-find_package(Qt4 COMPONENTS QtCore QtGui QtNetwork REQUIRED)
+find_package(Qt4 REQUIRED)
+set(QT_USE_QTNETWORK true)
 set(QT_USE_QTSVG true)
 set(QT_USE_QTSCRIPT true)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-message(${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+include(${QT_USE_FILE})
 
-# sources
+include(qt-property-editor-config.cmake)
+
+include_directories(
+  ${SOURCE_DIR}
+  ${SOURCE_DIR}/src/
+  ${BUILD_DIR}
+  ${LibArchive_INCLUDE_DIRS}
+  )
+
+# {{{ Sources
 set(SONGBOOK_CLIENT_SOURCES
   src/main.cc
   src/main-window.cc
@@ -93,126 +98,150 @@ set(SONGBOOK_CLIENT_QT_HEADER
 # to be able to call Sparkle (Autoupdate) on Mac os
 # ressources
 #should be moved in mac only and use 'LIST' to append
-set(SONGBOOK_CLIENT_RCS songbook.qrc icons/macos/macos.qrc icons/tango/tango.qrc songbook.rc)
+set(SONGBOOK_CLIENT_RCS
+  songbook.qrc
+  icons/macos/macos.qrc
+  icons/tango/tango.qrc
+  songbook.rc
+  )
+
+set(SONGBOOK_CLIENT_MAN_SRCS
+  ${SOURCE_DIR}/manpages/songbook-client.1.txt
+  )
+set(SONGBOOK_CLIENT_MAN_LANGS fr)
+# }}}
 
 # process Qt special files
-include(${QT_USE_FILE})
 qt4_wrap_cpp(SONGBOOK_CLIENT_MOCS ${SONGBOOK_CLIENT_QT_HEADER})
 qt4_add_resources(SONGBOOK_CLIENT_RESSOURCES ${SONGBOOK_CLIENT_RCS})
-include_directories (${CMAKE_CURRENT_BINARY_DIR} src)
 
-# Support for qtpropertybrowser
-set(qpe_DIR src/qtpropertybrowser)
-set(qpe_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/src)
 
-include_directories(${qpe_DIR} ${qpe_BUILD_DIR})
-
-set(
-  qtpropertyeditor_HEADER_NEED_MOCS
-  ${qpe_DIR}/qtpropertybrowser.h
-  ${qpe_DIR}/qtpropertymanager.h
-  ${qpe_DIR}/qteditorfactory.h
-  ${qpe_DIR}/qtvariantproperty.h
-  ${qpe_DIR}/qttreepropertybrowser.h
-  ${qpe_DIR}/qtbuttonpropertybrowser.h
-  ${qpe_DIR}/qtgroupboxpropertybrowser.h
-  )
-
-set(
-  qtpropertyeditor_SRCS_NEED_MOCS
-  ${qpe_DIR}/qtpropertymanager.cpp
-  ${qpe_DIR}/qteditorfactory.cpp
-  ${qpe_DIR}/qttreepropertybrowser.cpp
-  )
-
-set(
-  qtpropertyeditor_SRCS
-  ${qtpropertyeditor_SRCS_NEED_MOCS}
-  ${qpe_DIR}/qtpropertybrowser.cpp
-  ${qpe_DIR}/qtvariantproperty.cpp
-  ${qpe_DIR}/qtbuttonpropertybrowser.cpp
-  ${qpe_DIR}/qtgroupboxpropertybrowser.cpp
-  ${qpe_DIR}/qtpropertybrowserutils.cpp
-  )
-
-# Process MOC on QtPropertyEditor headers
-foreach(file ${qtpropertyeditor_HEADER_NEED_MOCS})
-  string(REGEX REPLACE "${qpe_DIR}/(.*)\\.h" "${qpe_BUILD_DIR}/moc_\\1.cpp" moc_file "${file}" )
-  qt4_generate_moc(${file} ${moc_file})
-  set(qtpropertyeditor_MOC ${qtpropertyeditor_MOC} ${moc_file})
-endforeach(file)
-
-# Process MOC on QtPropertyEditor srcs
-foreach(file ${qtpropertyeditor_SRCS_NEED_MOCS})
-  string(REGEX REPLACE "${qpe_DIR}/(.*)\\.cpp" "${qpe_BUILD_DIR}/\\1.moc" moc_file "${file}" )
-  qt4_generate_moc(${file} ${moc_file})
-  set(qtpropertyeditor_MOC ${qtpropertyeditor_MOC} ${moc_file})
-endforeach(file)
-
-set_source_files_properties(${qtpropertyeditor_MOC}
-  PROPERTIES
-  HEADER_FILE_ONLY true
-)
-
-# qtpropertybrowserutils_p.h is a special file, do not treat him as the other
-# header files.
-qt4_generate_moc(
-  ${qpe_DIR}/qtpropertybrowserutils_p.h
-  ${qpe_BUILD_DIR}/moc_qtpropertybrowserutils_p.cpp
-)
-
-set(qtpropertyeditor_MOC
-  ${qtpropertyeditor_MOC} 
-  ${qpe_BUILD_DIR}/moc_qtpropertybrowserutils_p.cpp
-)
-
-qt4_add_resources(qtpropertyeditor_RESOURCES ${qpe_DIR}/qtpropertybrowser.qrc)
-#-------------------------------------------------------------------------------
-#internationalization
-set (TRANSLATIONS
-lang/songbook_en.ts
-lang/songbook_fr.ts)
-
-set (COMPILED_TRANSLATIONS
-lang/songbook_fr.qm
-lang/songbook_en.qm)
-
-add_custom_command (OUTPUT
-${COMPILED_TRANSLATIONS}
-COMMAND "${QT_LRELEASE_EXECUTABLE}" ${TRANSLATIONS}
-DEPENDS ${TRANSLATIONS}
-WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-#uncomment and run make to update translations ts files from sources
-#warning, if uncommented, running make clean will remove ts files
-#qt4_create_translation(COMPILED_TRANSLATIONS ${SONGBOOK_CLIENT_SOURCES} ${TRANSLATIONS} )
+# {{{ Apple specific stuff
+if(APPLE)
+  include(macos-config.cmake)
+endif(APPLE)
+# }}}
 
 # generating executable
-add_definitions("-g -Wall")
-if(APPLE)
-  include(CMakeLists-Mac.cmake)
-else( APPLE )
-    add_executable(${SONGBOOK_CLIENT_APPLICATION_NAME}
-      ${SONGBOOK_CLIENT_SOURCES} 
-      ${SONGBOOK_CLIENT_MOCS} 
-      ${SONGBOOK_CLIENT_RESSOURCES} 
-      ${COMPILED_TRANSLATIONS}
-      ${qtpropertyeditor_SRCS}
-      ${qtpropertyeditor_MOC}
-      ${qtpropertyeditor_RESOURCES}
+if(NOT APPLE)
+  add_executable(${SONGBOOK_CLIENT_APPLICATION_NAME}
+    ${SONGBOOK_CLIENT_SOURCES}
+    ${SONGBOOK_CLIENT_MOCS}
+    ${SONGBOOK_CLIENT_RESSOURCES}
+    ${COMPILED_TRANSLATIONS}
+    ${QT_PROPERTY_EDITOR_SOURCES}
     )
-endif( APPLE )
+endif(NOT APPLE)
 
-target_link_libraries(${SONGBOOK_CLIENT_APPLICATION_NAME} ${QT_LIBRARIES})
 if(WIN32)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-enable-auto-import")
 endif(WIN32)
-target_link_libraries(${SONGBOOK_CLIENT_APPLICATION_NAME} ${LibArchive_LIBRARIES})
 
-# install instructions
+target_link_libraries(${SONGBOOK_CLIENT_APPLICATION_NAME} ${QT_LIBRARIES} ${LibArchive_LIBRARIES})
+
+# {{{ Internationalization
+set (TRANSLATIONS
+  lang/songbook_en.ts
+  lang/songbook_fr.ts)
+
+set (COMPILED_TRANSLATIONS
+  lang/songbook_fr.qm
+  lang/songbook_en.qm)
+
+add_custom_command(
+  COMMAND "${QT_LRELEASE_EXECUTABLE}" ${TRANSLATIONS}
+  OUTPUT ${COMPILED_TRANSLATIONS}
+  DEPENDS ${TRANSLATIONS}
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+#uncomment and run make to update translations ts files from sources
+#warning, if uncommented, running make clean will remove ts files
+#qt4_create_translation(COMPILED_TRANSLATIONS ${SONGBOOK_CLIENT_SOURCES} ${TRANSLATIONS} )
+# }}}
+
+# {{{ Manpages
+if(GENERATE_MANPAGES)
+
+  # add the default translation to the list of languages
+  set(SONGBOOK_CLIENT_MAN_LANGS default ${SONGBOOK_CLIENT_MAN_LANGS})
+
+  foreach(lang ${SONGBOOK_CLIENT_MAN_LANGS})
+
+    foreach(txtfile ${SONGBOOK_CLIENT_MAN_SRCS})
+      # figure the base name of the file (ie "songbook-client.1")
+      GET_FILENAME_COMPONENT(tmpname ${txtfile} NAME)
+      string(REGEX REPLACE ".txt\$" "" basename ${tmpname})
+
+      # figure the relative path of the file
+      GET_FILENAME_COMPONENT(tmppath ${txtfile} PATH)
+      string(REPLACE ${SOURCE_DIR}/ "" relpath ${tmppath})
+
+      # figure the manpage section to install to from filename
+      string(REGEX REPLACE "^.*\\.([0-9])$" "\\1" section ${basename})
+
+      # construct the language specific versions of the basename and path
+      if (lang STREQUAL default)
+        set(basename2 ${basename})
+        set(relpath2 ${relpath}/man${section})
+      else()
+        set(basename2 ${basename}.${lang})
+        set(relpath2 ${relpath}/${lang}/man${section})
+      endif()
+
+      # create the build directory (if it does not exist)
+      file(MAKE_DIRECTORY ${BUILD_DIR}/${relpath2})
+
+      # set the final filenames
+      set(txtfile ${SOURCE_DIR}/${relpath}/${basename2}.txt)
+      set(xmlfile ${BUILD_DIR}/${relpath2}/${basename}.xml)
+      set(gzfile  ${BUILD_DIR}/${relpath2}/${basename}.gz)
+      set(manfile ${BUILD_DIR}/${relpath2}/${basename})
+
+      add_custom_command(
+        COMMAND ${ASCIIDOC_EXECUTABLE} -d manpage -b docbook -o ${xmlfile} - < ${txtfile}
+        WORKING_DIRECTORY ${BUILD_DIR}/${relpath2}
+        OUTPUT  ${xmlfile}
+        DEPENDS ${txtfile}
+        VERBATIM)
+      add_custom_command(
+        COMMAND ${XMLTO_EXECUTABLE} man ${xmlfile}
+        OUTPUT  ${manfile}
+        WORKING_DIRECTORY ${BUILD_DIR}/${relpath2}
+        DEPENDS ${xmlfile})
+
+      if(COMPRESS_MANPAGES)
+        add_custom_command(
+          COMMAND ${GZIP_EXECUTABLE} < ${manfile} > ${gzfile}
+          OUTPUT  ${gzfile}
+          WORKING_DIRECTORY ${BUILD_DIR}/${relpath2}
+          DEPENDS ${manfile}
+          VERBATIM)
+
+        set(MAN_FILES ${MAN_FILES} ${gzfile})
+      else()
+        set(MAN_FILES ${MAN_FILES} ${manfile})
+      endif()
+    endforeach()
+
+  endforeach()
+
+  add_custom_target(man ALL DEPENDS ${MAN_FILES})
+endif()
+# }}}
+
+# {{{ Installation
 if(NOT APPLE)
   install(TARGETS ${SONGBOOK_CLIENT_APPLICATION_NAME} RUNTIME DESTINATION bin)
+  if(GENERATE_MANPAGES)
+    if(COMPRESS_MANPAGES)
+      set(regex "\\.(xml|txt|[0-9])$")
+    else()
+      set(regex "\\.(xml|txt|gz)$")
+    endif()
+    install(DIRECTORY ${BUILD_DIR}/${relpath}/ DESTINATION ${SONGBOOK_CLIENT_MAN_PATH}
+      REGEX ${regex} EXCLUDE)
+  endif()
   install(FILES ${SONGBOOK_CLIENT_APPLICATION_NAME}.desktop DESTINATION share/applications)
   install(FILES icons/songbook-client.png DESTINATION share/icons)
-  install(FILES ${COMPILED_TRANSLATIONS} DESTINATION share/${SONGBOOK_CLIENT_APPLICATION_NAME}/translations)
+  install(FILES ${COMPILED_TRANSLATIONS} DESTINATION ${SONGBOOK_CLIENT_DATA_PATH}/lang)
 endif(NOT APPLE)
+# }}}
