add mimetype info

--- a/songbook-client.desktop
+++ b/songbook-client.desktop
@@ -4,7 +4,8 @@ Type=Application
 Name=Patacrep Songbook Client
 Comment=Build Patacrep LaTeX Songbooks for Guitar Tabs
 TryExec=songbook-client
-Exec=songbook-client
+Exec=songbook-client %U
 Icon=songbook-client.png
 Terminal=false
 Categories=Application;Utility;
+MimeType=text/sg;text/sb;
