--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: songbook-client
 Section: text
 Priority: optional
 Maintainer: Romain Goffe <romain.goffe@gmail.com>
-Build-Depends: debhelper (>= 7), cmake (>=2.6.2), libqt4-dev (>= 4.6), qt4-qmake, libarchive-dev
+Build-Depends: debhelper (>= 7), cmake (>=2.6.2), libqt4-dev (>= 4.6), libarchive-dev
 Standards-Version: 3.8.3
 Homepage: http://www.patacrep.com
 
