--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: songbook-client
 Section: text
 Priority: optional
 Maintainer: Romain Goffe <romain.goffe@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~), cmake (>=2.6.2), libqt4-dev (>= 4.6), libarchive-dev
+Build-Depends: debhelper (>= 7.0.50~), cmake (>=2.6.2), libqt4-dev (>= 4.6), libarchive-dev, asciidoc, xmlto
 Standards-Version: 3.9.1
 Homepage: http://www.patacrep.com
 
