add another variable in config.hh.in
	plan is to use this variable as build-time to get the current commit sha in
	the GUI for nightly if there is a bug to report.

--- a/config.hh.in
+++ b/config.hh.in
@@ -8,8 +8,7 @@
 #define SONGBOOK_CLIENT_COMPILE_HOSTNAME "@SONGBOOK_CLIENT_COMPILE_HOSTNAME@"
 #define SONGBOOK_CLIENT_RELEASE          "@SONGBOOK_CLIENT_RELEASE@"
 #define SONGBOOK_CLIENT_DATA_PATH        "@SONGBOOK_CLIENT_DATA_PATH@"
-
+#define SONGBOOK_CLIENT_COMMIT_DESCRIBE  "@SONGBOOK_CLIENT_COMMIT_DESCRIBE@"
 #cmakedefine USE_SPARKLE
-#cmakedefine USE_PROUT
 
 #endif // __CONFIG_HH__
