Windows: do not run the app as a terminal application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,7 +121,7 @@ endif(APPLE)
 
 # generating executable
 if(NOT APPLE)
-  add_executable(${SONGBOOK_CLIENT_APPLICATION_NAME}
+  add_executable(${SONGBOOK_CLIENT_APPLICATION_NAME} WIN32
     ${SONGBOOK_CLIENT_SOURCES}
     ${SONGBOOK_CLIENT_MOCS}
     ${SONGBOOK_CLIENT_RESSOURCES}
