Extract the Song structure from library
Song structure provides method to create a song structure
from a file or a text content. It also provides convert
methods from Language to string.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/main-window.cc
   src/preferences.cc
   src/library.cc
+  src/song.cc
   src/library-view.cc
   src/songbook.cc
   src/song-editor.cc
