rename highlighter files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/library-view.cc
   src/songbook.cc
   src/song-editor.cc
-  src/highlighter.cc
+  src/song-highlighter.cc
   src/dialog-new-song.cc
   src/label.cc
   src/unit-property-manager.cc
@@ -64,7 +64,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/library-view.hh
   src/songbook.hh
   src/song-editor.hh
-  src/highlighter.hh
+  src/song-highlighter.hh
   src/dialog-new-song.hh
   src/label.hh
   src/unit-property-manager.hh
