split song/logs highlighters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/songbook.cc
   src/song-editor.cc
   src/song-highlighter.cc
+  src/logs-highlighter.cc
   src/dialog-new-song.cc
   src/label.cc
   src/unit-property-manager.cc
@@ -65,6 +66,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/songbook.hh
   src/song-editor.hh
   src/song-highlighter.hh
+  src/logs-highlighter.hh
   src/dialog-new-song.hh
   src/label.hh
   src/unit-property-manager.hh
