Add a song header editor to the song editor
Currently the song header editor only provides information
about the song but modifying the fields does not change
anything. The related classes are updated to handle the
fact that CSongEditor is now a QWidget and contains a code
editor instead of inheriting it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/library-view.cc
   src/songbook.cc
   src/song-editor.cc
+  src/song-header-editor.cc
   src/song-highlighter.cc
   src/logs-highlighter.cc
   src/dialog-new-song.cc
@@ -55,6 +56,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/library-view.hh
   src/songbook.hh
   src/song-editor.hh
+  src/song-header-editor.hh
   src/song-highlighter.hh
   src/logs-highlighter.hh
   src/dialog-new-song.hh
