windows: hunspell support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ if(ENABLE_LIBRARY_DOWNLOAD)
   LIST(APPEND LIBRARIES ${LibArchive_LIBRARIES})
 endif()
 
-if(ENABLE_SPELL_CHECKING)
+if(ENABLE_SPELLCHECK)
   include_directories(${HUNSPELL_INCLUDE_DIR})
   LIST(APPEND LIBRARIES ${HUNSPELL_LIBRARIES})
 endif()
