--- a/config.hh.in
+++ b/config.hh.in
@@ -11,6 +11,6 @@
 #define SONGBOOK_CLIENT_COMMIT_DESCRIBE  "@SONGBOOK_CLIENT_COMMIT_DESCRIBE@"
 #cmakedefine USE_SPARKLE
 #cmakedefine ENABLE_LIBRARY_DOWNLOAD
-#cmakedefine ENABLE_SPELL_CHECKING
+#cmakedefine ENABLE_SPELLCHECK
 
 #endif // __CONFIG_HH__
