Update gbp.conf to register git-buildpackage

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,6 @@
 [DEFAULT]
-upstream-branch=debian-upstream
-debian-branch=debian-debian
+upstream-branch = debian-upstream
+debian-branch = debian-wheezy
+[git-buildpackage]
+export-dir = build-package/
+debian-tag = debian-wheezy/%(version)s
